--- a/user/common.html
+++ b/user/common.html
@@ -1,104 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4차 Common</title>
-  <link rel="stylesheet" href="css/common.css">
-</head>
-<body>
-  <header class="">
-      <div class="container d-flex justify-content-between">
-          <h1 class="hidden">fastcode</h1>
-          <nav class="main-menu-ft">
-              <ul class="d-flex">
-                  <li><a href="">about us</a></li>
-                  <li><a href="">강의</a></li>
-                  <li><a href="">커뮤니티</a></li>
-                  <li><a href="">이벤트</a></li>
-                  <li><a href="">고객지원</a></li>
-              </ul>
-          </nav>
-          <form action="">
-              <input type="text" />
-          </form>
-          <ul class="member-info d-flex">
-              <li>
-                  <a href=""><i class="fa-solid fa-cart-shopping"></i><span>cart</span></a>
-              </li>
-              <li>
-                  <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i><span>login</span></a>
-              </li>
-              <li>
-                  <a href=""><i class="fa-solid fa-user-plus"></i><span>sign up</span></a>
-              </li>
-          </ul>
-      </div>
-  </header>
-  
-  <h1 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h1>
-  <h2 class="main-title">페이지 제목</h2>
-  <h2 class="popup-title">팝업 제목</h2>
-  <h3 class="title">제목</h3>
-  <h4 class="sub-title">서브 제목</h4>
-  <h3 class="content-title">컨텐츠 제목</h3>
-  <p class="content-text-1">컨텐츠 내용1</p>
-  <p class="content-text-2">컨텐츠 내용2</p>
-  <p class="content-text-3">컨텐츠 내용3</p>
-  <hr>
-  <h3 class="main-menu-ft">메인메뉴</h3>
-  <h4 class="sub-menu-ft">서브메뉴</h4>
-  <hr>
-  <a class="y-btn big-btn btn-navy">button</a>
-  <a class="y-btn big-btn btn-sky">BUTTON</a>
-  <a class="y-btn big-btn btn-red">BUTTON</a>
-  <hr>
-  <a class="y-btn small-btn btn-navy">button</a>
-  <a class="y-btn small-btn btn-sky">BUTTON</a>
-  <a class="y-btn small-btn btn-red">BUTTON</a>
-  <hr>
-  <span class="lec_play"><i class="fa-regular fa-circle-play"></i></span>
-  <hr>
-<<<<<<< Updated upstream
-  <div class="top-btn">
-        <i class="fa-solid fa-arrow-up"></i>
-  </div>
-  <hr>
-=======
-  
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="footer_top d-flex">
-        <ul class="footer_menu d-flex">
-          <li class="content-text-2"><a href="#">회사소개</a></li>
-          <li class="content-text-2"><a href="#">개인정보처리 방침</a></li>
-          <li class="content-text-2"><a href="#">서비스이용약관</a></li>
-          <li class="content-text-2"><a href="#">취소환불규정</a></li>
-          <li class="content-text-2"><a href="#">자료실</a></li>
-          <li class="content-text-2"><a href="#">고객센터</a></li>
-          <li class="content-text-2"><a href="#">사이트맵</a></li>
-        </ul>
-        <ul class="footer_sns d-flex">
-          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa-solid fa-blog"></i></a></li>
-        </ul>
-      </div>
-      <div class="footer_bottom d-flex">
-        <h6 id="main-logo"><a href="/"><img src="img/fastcode_logo.png" alt="Fastcode"><span>fastcode</span></a></h6>
-        <div class="footer_contents">
-          <h5 class="content-title">(주) FASTCODE</h5>
-          <span class="content-text-3">대표자 김유미 | 사업자 등록 번호 123-45-67890</span>
-          <span class="content-text-3">주소: 서울 특별시 종로구 수표로 96 국일관드림팰리스 | 이메일: yumi@fastcode.com |전화: 02-1212-1212</span>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>4차 Common</title>
+        <link rel="stylesheet" href="css/common.css" />
+    </head>
+    <body>
+        <header class="">
+            <div class="container d-flex justify-content-between">
+                <h1 id="main-logo">
+                    <a href="/"><img src="img/fastcode_logo.png" alt="Fastcode" /><span>fastcode</span></a>
+                </h1>
+                <nav class="main-menu-ft">
+                    <ul class="d-flex">
+                        <li><a href="">about us</a></li>
+                        <li><a href="">강의</a></li>
+                        <li><a href="">커뮤니티</a></li>
+                        <li><a href="">이벤트</a></li>
+                        <li><a href="">고객지원</a></li>
+                    </ul>
+                </nav>
+                <form action="">
+                    <input type="text" />
+                </form>
+                <ul class="member-info d-flex">
+                    <li>
+                        <a href=""><i class="fa-solid fa-cart-shopping"></i><span>cart</span></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i><span>login</span></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa-solid fa-user-plus"></i><span>sign up</span></a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+
+        <h2 class="main-title">페이지 제목</h2>
+        <h2 class="popup-title">팝업 제목</h2>
+        <h3 class="title">제목</h3>
+        <h4 class="sub-title">서브 제목</h4>
+        <h3 class="content-title">컨텐츠 제목</h3>
+        <p class="content-text-1">컨텐츠 내용1</p>
+        <p class="content-text-2">컨텐츠 내용2</p>
+        <p class="content-text-3">컨텐츠 내용3</p>
+        <hr />
+        <h3 class="main-menu-ft">메인메뉴</h3>
+        <h4 class="sub-menu-ft">서브메뉴</h4>
+        <hr />
+        <a class="y-btn big-btn btn-navy">button</a>
+        <a class="y-btn big-btn btn-sky">BUTTON</a>
+        <a class="y-btn big-btn btn-red">BUTTON</a>
+        <hr />
+        <a class="y-btn small-btn btn-navy">button</a>
+        <a class="y-btn small-btn btn-sky">BUTTON</a>
+        <a class="y-btn small-btn btn-red">BUTTON</a>
+        <hr />
+        <span class="lec_play"><i class="fa-regular fa-circle-play"></i></span>
+        <hr />
+
+        <div class="top-btn">
+            <i class="fa-solid fa-arrow-up"></i>
         </div>
-        <div class="footer_copyright"><span class="content-text-3">Copyright@2023 Fastcode. All Rights reserved</span></div>
-      </div>
-    </div>
-  </footer>
->>>>>>> Stashed changes
-</body>
+        <hr />
+
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="footer_top d-flex">
+                    <ul class="footer_menu d-flex">
+                        <li class="content-text-2"><a href="#">회사소개</a></li>
+                        <li class="content-text-2"><a href="#">개인정보처리 방침</a></li>
+                        <li class="content-text-2"><a href="#">서비스이용약관</a></li>
+                        <li class="content-text-2"><a href="#">취소환불규정</a></li>
+                        <li class="content-text-2"><a href="#">자료실</a></li>
+                        <li class="content-text-2"><a href="#">고객센터</a></li>
+                        <li class="content-text-2"><a href="#">사이트맵</a></li>
+                    </ul>
+                    <ul class="footer_sns d-flex">
+                        <li>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-blog"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer_bottom d-flex">
+                    <h6 id="main-logo">
+                        <a href="/"><img src="img/fastcode_logo.png" alt="Fastcode" /><span>fastcode</span></a>
+                    </h6>
+                    <div class="footer_contents">
+                        <h5 class="content-title">(주) FASTCODE</h5>
+                        <span class="content-text-3">대표자 김유미 | 사업자 등록 번호 123-45-67890</span>
+                        <span class="content-text-3">주소: 서울 특별시 종로구 수표로 96 국일관드림팰리스 | 이메일: yumi@fastcode.com |전화: 02-1212-1212</span>
+                    </div>
+                    <div class="footer_copyright"><span class="content-text-3">Copyright@2023 Fastcode. All Rights reserved</span></div>
+                </div>
+            </div>
+        </footer>
+
+    </body>
 </html>
